src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Accrual_Method__c</fullName>
        <inlineHelpText>Shows which accrual method we are using on a transaction</inlineHelpText>
        <label>Accrual Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actual/360</fullName>
                    <default>true</default>
                    <label>Actual/360</label>
                </value>
                <value>
                    <fullName>30/360</fullName>
                </value>
                <value>
                    <fullName>Actual/365</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Anticipated_Mo_of_LOI_Exec__c</fullName>
        <inlineHelpText>The month the LOI is actually likely to execute.</inlineHelpText>
        <label>Actual Mo. Likely LOI Exec OLD</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Month</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Mo_Likely_LOI_Exec_Date__c</fullName>
        <label>Actual Mo. Likely LOI Exec</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Project_Finish_Date__c</fullName>
        <label>Actual Project Finish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Project_Start_Date__c</fullName>
        <label>Actual Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amount_of_Incentive_est__c</fullName>
        <inlineHelpText>The estimated amount of the incentive.</inlineHelpText>
        <label>Amount of Incentive (Est.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_1st_Mortgage_Payments__c</fullName>
        <inlineHelpText>The current annual mortgage payment,  as taken from the most recent mortgage servicer&apos;s statement</inlineHelpText>
        <label>Annual Mortgage Payment (1st)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_2nd_Mortgage_Payments__c</fullName>
        <inlineHelpText>The current annual mortgage payment,  as taken from the most recent mortgage servicer&apos;s statement</inlineHelpText>
        <label>Annual Mortgage Payment (2nd)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Business_Expenses__c</fullName>
        <inlineHelpText>The annual amount of money that is expensed by a company for its business activities.</inlineHelpText>
        <label>Annual Business Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Business_Net_Operating_Income__c</fullName>
        <formula>Business_Revenue__c - Annual_Business_Expenses__c  -  Cost_of_Goods_Sold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field calculates the sum of annual business expenses and cost of goods sold.</inlineHelpText>
        <label>Annual Business Net Operating Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_PACE_Payment_Admin_Fee__c</fullName>
        <inlineHelpText>This is annual PACE Payment Admin Fee.</inlineHelpText>
        <label>Annual PACE Payment Admin Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>App_Executed_Date__c</fullName>
        <inlineHelpText>The date the application was signed.</inlineHelpText>
        <label>Application Executed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Submission_Date__c</fullName>
        <inlineHelpText>The date the PACE Partner submitted the application to CleanFund.</inlineHelpText>
        <label>Application Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraisal_Cap_Rate__c</fullName>
        <inlineHelpText>Cap Rate on Appraisal</inlineHelpText>
        <label>Appraisal Cap Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Appraisal_Completed_Date__c</fullName>
        <inlineHelpText>The date the appraisal was reviewed and deemed complete.</inlineHelpText>
        <label>Appraisal Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraisal_Completed_in_Last_5_Years__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appraised in the last 5 years</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appraisal_Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the name of the firm that conducted the Appraisal.</inlineHelpText>
        <label>Appraisal Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Appraisal Name)</relationshipLabel>
        <relationshipName>Opportunities8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Appraisal_Scope__c</fullName>
        <label>Appraisal Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Restricted</fullName>
                </value>
                <value>
                    <fullName>NAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appraised_Property_Value_As_Complete__c</fullName>
        <description>As-Complete Appraised Value</description>
        <inlineHelpText>Value of property as of the date of the &quot;as-complete&quot; appraised value.  This includes FF&amp;E and Personal Property if applicable.</inlineHelpText>
        <label>As-Complete Appraised Value</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appraiser_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The is the name of the appraiser that conducted the Appraisal.</inlineHelpText>
        <label>Appraiser Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The appraiser must be a contact of the appraisal company.</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Appraisal_Firm__c</valueField>
            </filterItems>
            <infoMessage>This appraiser must be associated with the appraisal company.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Appraiser Name)</relationshipLabel>
        <relationshipName>Opportunities3N0S</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AsIs_Appraised_Value_Date__c</fullName>
        <inlineHelpText>Date of as-is appraised value (NOT report date) as defined by the appraisal. Will never be a future value.</inlineHelpText>
        <label>As-Is Appraised Value Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>As_Complete_CLTV_Ratio__c</fullName>
        <formula>(Financing_Amount__c+Total_Debt__c)/Appraised_Property_Value_As_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>As-Complete CLTV Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>As_Complete_LTV_Ratio__c</fullName>
        <formula>Total_Debt__c/Appraised_Property_Value_As_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>As-Complete LTV Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>As_Complete_LiTV_Ratio__c</fullName>
        <formula>Financing_Amount__c/Appraised_Property_Value_As_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>As-Complete LiTV Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>As_Complete_Value_Used__c</fullName>
        <inlineHelpText>Does the appraisal contemplate a future (i.e., as-complete) valuation.</inlineHelpText>
        <label>As-Complete Valuation Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>As_Is_Appraised_Value__c</fullName>
        <inlineHelpText>Value of property as of the date of the &quot;as-is&quot; appraised value.  This includes FF&amp;E and Personal Property if applicable.</inlineHelpText>
        <label>As-Is Appraised Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>As_Is_CLTV_Ratio__c</fullName>
        <formula>(Financing_Amount__c+Total_Debt__c)/As_Is_Appraised_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>As-Is CLTV Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>As_Is_LTV_Ratio__c</fullName>
        <formula>Total_Debt__c/As_Is_Appraised_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>As-Is LTV Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>As_Is_Land_Value__c</fullName>
        <inlineHelpText>This is the value of the Land underlying the Property, without considering the value of any improvements or structures.</inlineHelpText>
        <label>As Is Land Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>As_Is_LiTV_Ratio__c</fullName>
        <formula>Financing_Amount__c/As_Is_Appraised_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>As-Is LiTV Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>As_Stabalized_Appraised_Value__c</fullName>
        <inlineHelpText>This is value of the Property, once all renovations are complete and the building is operating at expected occupancy.</inlineHelpText>
        <label>As-Stabilized Appraised Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>As_Stabalized_FF_and_E_Personal_Prop__c</fullName>
        <inlineHelpText>This is the value of the furniture, fixtures and equipment (&quot;FF&amp;E&quot;) that is included in the &quot;As Stabilized&quot; value.</inlineHelpText>
        <label>As-Stabilized FF and E + Personal Prop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>As_Stabalized_Value_Date__c</fullName>
        <inlineHelpText>This is the date that the &quot;As Stabilized&quot; value is expected to be achieved.</inlineHelpText>
        <label>As-Stabilized Value Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>As_Stabilized_CLTV_Ratio__c</fullName>
        <formula>(Financing_Amount__c+Total_Debt__c)/As_Stabalized_Appraised_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>As-Stabilized CLTV Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>As_Stabilized_LTV_Ratio__c</fullName>
        <formula>Total_Debt__c/As_Stabalized_Appraised_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>As-Stabilized LTV Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>As_Stabilized_LiTV_Ratio__c</fullName>
        <formula>Financing_Amount__c/As_Stabalized_Appraised_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>As-Stabilized LiTV Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Assessed_Value_Date__c</fullName>
        <inlineHelpText>Date of Assessed Value in which fiscal tax year start. Always July 1 in CA.</inlineHelpText>
        <label>Assessed Value Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessed_Value__c</fullName>
        <inlineHelpText>This is the assessed value of the property.  This includes FF&amp;E and Personal Property if applicable.</inlineHelpText>
        <label>Assessed Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assessment_Contract_Sent__c</fullName>
        <inlineHelpText>The date the assessment contract was sent.</inlineHelpText>
        <label>Assessment Contract Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Authorized_Signer_1st__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is the signer for the property owner entity?</inlineHelpText>
        <label>Authorized Signer - 1st</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Authorized Signer - 1st)</relationshipLabel>
        <relationshipName>Opportunities8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorized_Signer_2nd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The second authorized signer is optional, needed if 2 signers are legally required.</inlineHelpText>
        <label>Authorized Signer -  2nd</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Authorized Signer -  2nd)</relationshipLabel>
        <relationshipName>Opportunities9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorized_Signer_RO_1st__c</fullName>
        <formula>HYPERLINK( &quot;https://na16.salesforce.com/&quot; &amp; Property_Owner_Main_Contact__r.Id ,  Authorized_Signer_1st__r.FirstName  &amp; &quot; &quot; &amp;  Authorized_Signer_1st__r.LastName , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The person authorized to sign documents on behalf of the owner of the property.</inlineHelpText>
        <label>Authorized Signer - 1st</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Signer_RO_2nd__c</fullName>
        <formula>HYPERLINK( &quot;https://na16.salesforce.com/&quot; &amp; Property_Owner_Main_Contact__r.Id ,  Authorized_Signer_2nd__r.FirstName  &amp; &quot; &quot; &amp;  Authorized_Signer_2nd__r.LastName , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Authorized Signer second if necessary.</inlineHelpText>
        <label>Authorized Signer -  2nd</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avoided_Cost_of_Electricity_ACOE__c</fullName>
        <inlineHelpText>Year 1 utility rate or year 1 value of solar production rate.</inlineHelpText>
        <label>Year 1 Electricity Bill Savings</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance_As_Of_Date__c</fullName>
        <inlineHelpText>This is the oldest current balance as of  date on any lien against this property.  Blanks are not considered.</inlineHelpText>
        <label>Current Balance As Of Date</label>
        <summarizedField>Lien__c.Current_Balance_as_of_Date__c</summarizedField>
        <summaryForeignKey>Lien__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Bankruptcy_Date__c</fullName>
        <label>Bankruptcy Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bankruptcy_Notes__c</fullName>
        <label>Bankruptcy Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bankruptcy_Proceedings_or_Litigation__c</fullName>
        <inlineHelpText>Is the Property currently named in, or subject to, any bankruptcy proceedings?</inlineHelpText>
        <label>Bankruptcy Proceedings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benchmark_Cushion_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The rate has change from LOI to Commitment and the cushion is being used.</inlineHelpText>
        <label>Benchmark Cushion Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benchmark_Cushion__c</fullName>
        <inlineHelpText>The amount of cushion (in bps) we are providing the customer to protect them from rate changes.</inlineHelpText>
        <label>Benchmark Cushion (bps)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Benchmark_Date_at_Commit__c</fullName>
        <inlineHelpText>The date which the benchmark was taken for the commitment letter.</inlineHelpText>
        <label>Benchmark Date at Commit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benchmark_Date_at_Indicative_Quote__c</fullName>
        <label>Benchmark Date at Indicative Quote</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benchmark_Date_at_LOI__c</fullName>
        <inlineHelpText>What date was the benchmark at LOI drawn from.  Typically from the COB the day before the LOI was issued.</inlineHelpText>
        <label>Benchmark Date at LOI</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benchmark_Date_at_Term_Sheet__c</fullName>
        <inlineHelpText>Date which the benchmark was taken for the Term Sheet.</inlineHelpText>
        <label>Benchmark Date at Term Sheet</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benchmark_Type__c</fullName>
        <inlineHelpText>Indicates which index the benchmark is based off of</inlineHelpText>
        <label>Benchmark Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Interest Rate Swap Yield</fullName>
                </value>
                <value>
                    <fullName>U.S. Treasury constant maturity yield</fullName>
                </value>
                <value>
                    <fullName>Fixed Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benchmark_at_Commit__c</fullName>
        <inlineHelpText>The benchmark at commitment.  If this is higher all or a portion of the cushion could be employed to keep the rate the same as it was at LOI.</inlineHelpText>
        <label>Benchmark at Commit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Benchmark_at_Indicative_Quote_c__c</fullName>
        <label>Benchmark at Indicative Quote</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Benchmark_at_LOI__c</fullName>
        <inlineHelpText>What was the benchmark at the time the LOI was issued.</inlineHelpText>
        <label>Benchmark at LOI</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bill_Type__c</fullName>
        <inlineHelpText>This refers to whether PACE assessments are billed directly via single bill with their ad valorem taxes or on a separate bill.</inlineHelpText>
        <label>Bill Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Bill</fullName>
                </value>
                <value>
                    <fullName>Off Bill</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bond_Cost__c</fullName>
        <inlineHelpText>Total Bond Cost - Principle+Interest+Fees.  Does not include Capitalized Interest Payments.  (This is this properties contribution to the bond cost, if there is more than one property associated with the bond it will be rolled up at the bond level)</inlineHelpText>
        <label>Bond Cost</label>
        <summarizedField>Parcel__c.Total_Cost_P_I_Fees__c</summarizedField>
        <summaryForeignKey>Parcel__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Bond_Funding_Date_del__c</fullName>
        <inlineHelpText>The date the bond was funded.</inlineHelpText>
        <label>Bond Funding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bond_Maturity_Date__c</fullName>
        <description>Date Bond will mature</description>
        <inlineHelpText>Date Bond will mature</inlineHelpText>
        <label>Bond Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bond_Total__c</fullName>
        <inlineHelpText>Roll Up of Bond Principle on all APNs.  This represents this properties contribution to the bond total, if there is more than one property it will be rolled up at the bond level.</inlineHelpText>
        <label>Bond Total</label>
        <summarizedField>Parcel__c.Bond_Total__c</summarizedField>
        <summaryForeignKey>Parcel__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Bond__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Bond</inlineHelpText>
        <label>Bond</label>
        <referenceTo>Bond__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Building_Size_Type__c</fullName>
        <description>Type for Building Size (sq ft or # of units); recall that convention is Units for Multi-Family housing and Sq Ft for all other property types</description>
        <label>Building Size Unit of Measurement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sq Ft</fullName>
                    <default>true</default>
                    <label>Sq Ft</label>
                </value>
                <value>
                    <fullName>Units</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Building_Size__c</fullName>
        <description>Size of the Building associated with the Opportunity (either sq ft or # of units)</description>
        <label>Building Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buildings__c</fullName>
        <inlineHelpText>This is the number of structures located on the Property.</inlineHelpText>
        <label># Buildings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Net_Operating_Income__c</fullName>
        <inlineHelpText>Net Operating Income generated from owner&apos;s business. Note: This can be the same as Property Net Operating Income if 100% owner occupied.</inlineHelpText>
        <label>Business Net Operating Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Revenue__c</fullName>
        <inlineHelpText>The annual amount of money that is brought into a company by its business activities.</inlineHelpText>
        <label>Annual Business Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CAP_Submitted_Date__c</fullName>
        <inlineHelpText>Date CAP was submitted to the credit committee.</inlineHelpText>
        <label>CAP Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Assignment_ID__c</fullName>
        <inlineHelpText>Field used for OpenPACE legal Documents, required if funding through OpenPACE</inlineHelpText>
        <label>Assignment Instrument Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Commitment_Date__c</fullName>
        <description>Date CF sends Commitment Letter to Owner</description>
        <inlineHelpText>Date CF sends Commitment Letter to Owner</inlineHelpText>
        <label>CF Commitment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Due_Diligence_Deposit__c</fullName>
        <inlineHelpText>In the event an appraisal deposit is being collected, place the value of that deposit here</inlineHelpText>
        <label>CF Due Diligence Deposit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Fee_Rollup_Displayed_on_LOI__c</fullName>
        <formula>Partner_Financing_Fee__c + CleanFund_Financing_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This fee is CF Financing Fee + Partner Financing Fee</inlineHelpText>
        <label>CF Fee Rollup Displayed on LOI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Orig_Fee_Dollars__c</fullName>
        <formula>IF(ISPICKVAL(  Channel_Partner_Entity__r.Active_Affiliate_Agreement__r.Affiliate_Fee_Based_On__c , &quot;CleanFund Fee&quot;),
 Est_Improvement_Cost__c* Total_Financing_Fee__c * (1-Channel_Partner__c), Est_Improvement_Cost__c*(Total_Financing_Fee__c-Channel_Partner__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the CleanFund Origination Fee based on the Improvement Cost (Est.)</inlineHelpText>
        <label>CF Origination Fee ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Program__c</fullName>
        <inlineHelpText>Which CleanFund program is this project being funded under?</inlineHelpText>
        <label>CF Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small Balance</fullName>
                </value>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>Specialty</fullName>
                </value>
                <value>
                    <fullName>New Construction</fullName>
                </value>
                <value>
                    <fullName>Large Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Risk_Rating__c</fullName>
        <inlineHelpText>This is CleanFund&apos;s internal evaluation of the environmental risk associated with the Property.</inlineHelpText>
        <label>CF Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low Risk</fullName>
                </value>
                <value>
                    <fullName>Elevated Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPACE_Escrow__c</fullName>
        <inlineHelpText>Is Lender requiring Borrower to escrow PACE payments?</inlineHelpText>
        <label>CPACE Escrow</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CPACE_Financing_Structure__c</fullName>
        <inlineHelpText>Bonded or not? If so, single bond, or multiple?</inlineHelpText>
        <label>CPACE Bond?</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Capitalized_Interest_Accrual_Date__c</fullName>
        <inlineHelpText>The date through which the capital interest is funded.</inlineHelpText>
        <label>Capitalized Interest Accrual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Capitalized_Interest_NotPrepaid__c</fullName>
        <description>The amount of pre-funded interest, capitalized and included in the financing.</description>
        <inlineHelpText>The amount of pre-funded interest, capitalized and included in the financing.</inlineHelpText>
        <label>Capitalized Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capitalized_Interest__c</fullName>
        <label>Capitalized Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Agreement__c</fullName>
        <formula>If(Channel_Partner_Entity__r.Active_Affiliate_Agreement__r.Id==null,&quot;None&quot;,
HYPERLINK(&quot;https://na16.salesforce.com/&quot; &amp;  Channel_Partner_Entity__r.Active_Affiliate_Agreement__r.Id  ,&quot;Affiliate Agreement&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the channel partner agreement</inlineHelpText>
        <label>Channel Partner Agreement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Channel Partner associated with Opportunity</description>
        <label>Channel Partner Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Channel Partner Entity)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Fee_Based_On__c</fullName>
        <formula>TEXT(Channel_Partner_Entity__r.Active_Affiliate_Agreement__r.Affiliate_Fee_Based_On__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is derived from the Channel Partner Affiliate Agreement choices are (Project Cost or CleanFund Fee).</inlineHelpText>
        <label>Channel Partner Fee Based On</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Fee_Percent__c</fullName>
        <formula>IF(ISPICKVAL(  Channel_Partner_Entity__r.Active_Affiliate_Agreement__r.Affiliate_Fee_Based_On__c , &quot;CleanFund Fee&quot;),
 Total_Financing_Fee__c * Channel_Partner__c, Channel_Partner__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Channel Partner Origination Fee normalized to Project Cost</inlineHelpText>
        <label>Channel Partner Fee (%)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Fee__c</fullName>
        <formula>IF(ISPICKVAL(  Channel_Partner_Entity__r.Active_Affiliate_Agreement__r.Affiliate_Fee_Based_On__c , &quot;CleanFund Fee&quot;),
 Est_Improvement_Cost__c* Total_Financing_Fee__c *Channel_Partner__c, Est_Improvement_Cost__c*Channel_Partner__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Channel Partner Fee.  The basis of this calculation may be either the Improvement Cost (Est.) or the CleanFund Fee, depending upon the Affiliate Agreement.</inlineHelpText>
        <label>Channel Partner Fee ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Main_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Contact at Channel Partner associated with Opportunity</description>
        <label>Channel Partner Main Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>